increase dz-common version and remove StringUtils usage (#83)
Co-authored-by: Zalinius <zalinius@darzalgames.com>