@@ -12,7 +12,6 @@ import com.badlogic.gdx.scenes.scene2d.ui.Label;
 import com.badlogic.gdx.scenes.scene2d.utils.ChangeListener;
 import com.badlogic.gdx.utils.Pools;
 import com.darzalgames.darzalcommon.functional.Runnables;
-import com.darzalgames.darzalcommon.strings.StringUtils;
 import com.darzalgames.libgdxtools.ui.Alignment;
 import com.darzalgames.libgdxtools.ui.input.Input;
 import com.darzalgames.libgdxtools.ui.input.VisibleInputConsumer;
@@ -59,8 +58,8 @@ public class UniversalButton implements VisibleInputConsumer {
 			Label label = labelSupplier.get();
 			button.clearChildren();
 
-			int sidePadding = StringUtils.isBlank(label.getText().toString()) ? 0 : 3;
-			float startWidth = StringUtils.isBlank(label.getText().toString()) ? 0 : button.getWidth();
+			int sidePadding = label.getText().toString().isBlank() ? 0 : 3;
+			float startWidth = label.getText().toString().isBlank() ? 0 : button.getWidth();
 
 			button.add(image).padRight(sidePadding);
 			button.add(label);
@@ -170,7 +169,7 @@ public class UniversalButton implements VisibleInputConsumer {
 	 * @return Whether or not the button is blank
 	 */
 	public boolean isBlank() {
-		return StringUtils.isBlank(textSupplier.get()) && image == null;
+		return textSupplier.get().isBlank() && image == null;
 	}
 
 	/**
